Archive2/30/2b27fac2afa868/output
main.cpp:4:1: error: static assertion failed: libstdc++ std::vector::bool claims to be random access.
 static_assert(
 ^
main.cpp:10:1: error: static assertion failed: libstdc++ std::vector::bool SITS ON A THRONE OF LIES!
 static_assert(
 ^
